crates/power/src/snapshots/telmo_power__ui__tests__awake.snap
---
source: crates/power/src/ui.rs
expression: h.render()
---
 Power                                                                     82% · charging

╭─ Battery ──────────────────────────────────────────────────────────────────────────────╮
│   █▀█ ▀▀█         charging · 1h 05m until full                                         │
│   █▀█ █▀▀         96 W adapter                                                         │
│   ▀▀▀ ▀▀▀ %                                                                            │
╰────────────────────────╭─ Keep awake ─────────────────────────╮────────────────────────╯
╭─ Settings ─────────────│                                      │────────────────────────╮
│   Low Power Mode       │   ● Off                              │                        │
│ ▌ Keep awake           │     30 min                           │                        │
╰────────────────────────│ ▌   1 hour                           │────────────────────────╯
╭─ Using the most energy │     2 hours                          │────────────────────────╮
│   Zen                  │     Until turned off                 │                        │
│   Spotify              │                                      │                        │
│   Ghostty              │  ↵ choose   esc cancel               │                        │
│   Telegram             ╰──────────────────────────────────────╯                        │
│   coreaudiod              ━━──────────────────                                         │
╰────────────────────────────────────────────────────────────────────────────────────────╯



 ↵ change  i details  ? more  esc close
