crates/power/src/snapshots/telmo_power__ui__tests__desktop_without_battery.snap
---
source: crates/power/src/ui.rs
expression: "Harness::new(desktop()).render()"
---
 Power                                                                        on AC power

╭─ Settings ─────────────────────────────────────────────────────────────────────────────╮
│ ▌ Power mode            balanced                                                       │
│   Keep awake            off                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯















 ↵ change  ? more  esc close
