crates/power/src/snapshots/telmo_power__ui__tests__details.snap
---
source: crates/power/src/ui.rs
expression: h.render()
---
 Power                                                                     82% · charging

╭─ Battery ──────────────────────────────────────────────────────────────────────────────╮
│   ███ ███         charging · 1h 05m until full                                         │
│   █ █   █         96 W adapter                                                         │
│   ███ ███                                                                              │
│   █ █ █                                                                                │
│   ███ ███ %          ╭─ Battery health ─────────────────────────╮                      │
╰──────────────────────│                                          │──────────────────────╯
╭─ Settings ───────────│   max capacity  91%                      │──────────────────────╮
│ ▌ Low Power Mode     │   cycles        214                      │                      │
│   Keep awake         │   condition     normal                   │                      │
╰──────────────────────│                                          │──────────────────────╯
╭─ Using the most energ│  esc back                                │──────────────────────╮
│   Zen                ╰──────────────────────────────────────────╯                      │
│   Spotify                 ━━━━━━━━━━━━━───────                                         │
│   Ghostty                 ━━━━━───────────────                                         │
│   Telegram                ━━━━────────────────                                         │
│   coreaudiod              ━━──────────────────                                         │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 ↵ change  i details  ? more  esc close
