crates/power/src/snapshots/telmo_power__ui__tests__help.snap
---
source: crates/power/src/ui.rs
expression: h.render()
---
 Power                                                                     82% · charging

╭─ Battery ──────────────────────────────────────────────────────────────────────────────╮
│   █▀█ ▀▀█         charging · 1h 05m until full                                         │
│   █▀█ █▀▀         96 W adapter                                                         │
│   ▀▀▀ ▀▀▀ %                                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Settings ─────╭─ Keys ───────────────────────────────────────────────╮────────────────╮
│ ▌ Low Power Mod│                                                      │                │
│   Keep awake   │  ↵          change the selected setting              │                │
╰────────────────│  j k ↑ ↓    move between settings                    │────────────────╯
╭─ Using the most│  i          battery health                           │────────────────╮
│   Zen          │  esc q      close, then quit                         │                │
│   Spotify      │                                                      │                │
│   Ghostty      ╰──────────────────────────────────────────────────────╯                │
│   Telegram                ━━━━────────────────                                         │
│   coreaudiod              ━━──────────────────                                         │
╰────────────────────────────────────────────────────────────────────────────────────────╯



 ↵ change  i details  ? more  esc close
