crates/power/src/snapshots/telmo_power__ui__tests__loading_users.snap
---
source: crates/power/src/ui.rs
expression: "telmo_kit::test::render(90, 22, |f| app.draw(f))"
---
 Power                                                                     82% · charging

╭─ Battery ──────────────────────────────────────────────────────────────────────────────╮
│   █▀█ ▀▀█         charging · 1h 05m until full                                         │
│   █▀█ █▀▀         96 W adapter                                                         │
│   ▀▀▀ ▀▀▀ %                                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Settings ─────────────────────────────────────────────────────────────────────────────╮
│ ▌ Low Power Mode        off                                                            │
│   Keep awake            off                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Using the most energy ────────────────────────────────────────────────── ◜ measuring ─╮
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯



 ↵ toggle  i details  ? more  esc close
