crates/power/src/snapshots/telmo_power__ui__tests__low_power_on.snap
---
source: crates/power/src/ui.rs
expression: "Harness::new(snapshot).render()"
---
 Power                                                                   18% · on battery

╭─ Battery ──────────────────────────────────────────────────────────────────────────────╮
│   ▀█  █▀█         on battery · 4h 12m left                                             │
│    █  █▀█         not plugged in                                                       │
│   ▀▀▀ ▀▀▀ %                                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Settings ─────────────────────────────────────────────────────────────────────────────╮
│ ▌ Low Power Mode        on                                                             │
│   Keep awake            47m left                                                       │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Using the most energy ────────────────────────────────────────────────────────────────╮
│   Zen                     ━━━━━━━━━━━━━━━━━━━━                                         │
│   Spotify                 ━━━━━━━━━━━━━───────                                         │
│   Ghostty                 ━━━━━───────────────                                         │
│   Telegram                ━━━━────────────────                                         │
│   coreaudiod              ━━──────────────────                                         │
╰────────────────────────────────────────────────────────────────────────────────────────╯



 ↵ toggle  i details  ? more  esc close
