crates/power/src/snapshots/telmo_power__ui__tests__main.snap
---
source: crates/power/src/ui.rs
expression: "Harness::new(mock::snapshot()).render()"
---
 Power                                                                     82% · charging

╭─ Battery ──────────────────────────────────────────────────────────────────────────────╮
│   ███ ███         charging · 1h 05m until full                                         │
│   █ █   █         96 W adapter                                                         │
│   ███ ███                                                                              │
│   █ █ █                                                                                │
│   ███ ███ %                                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Settings ─────────────────────────────────────────────────────────────────────────────╮
│ ▌ Low Power Mode        off                                                            │
│   Keep awake            off                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Using the most energy ────────────────────────────────────────────────────────────────╮
│   Zen                     ━━━━━━━━━━━━━━━━━━━━                                         │
│   Spotify                 ━━━━━━━━━━━━━───────                                         │
│   Ghostty                 ━━━━━───────────────                                         │
│   Telegram                ━━━━────────────────                                         │
│   coreaudiod              ━━──────────────────                                         │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 ↵ toggle  i details  ? more  esc close
